--- a/writer/conf/config.yaml
+++ b/writer/conf/config.yaml
@@ -18,9 +18,6 @@ index:
     bytes: 10485760  # 10 MB
     interval: 5s
   cache:
-    shards: 1024
-    lifewindow: 30m
-    cleanwindow: 5m
     size: 2560  # in MB
 store:
   driver: devnull
@@ -32,8 +29,9 @@ store:
   username: cassandra
   password: cassandra
   table: metrics
-logging:
+general:
   level: debug
+  profiler: false
 stats:
   path: 'goshenite.interal'
   interval: 60s
