--- a/writer/conf/config.yaml
+++ b/writer/conf/config.yaml
@@ -15,7 +15,7 @@ index:
   region: eu-central-1
   sigv4: false
   flush:
-    bytes: 10485760  # 10 MB
+    bytes: 10_000_000  # items
     interval: 5s
   cache:
     size: 2560  # in MB
